--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
           <p>Happy birthday! Toby and I love you so much! A few friends stopped in to say a few words.I hope you have a great birthday weekend my love!</p>
 
-          <p>You know when to go out, you know when to stay in. Come to Julos this Saturday, and party like it's Mexico!</p>
+          <p>You know when to go out, you know when to stay in. Come to Julios this Saturday, and party like it's Mexico!</p>
 
           <img src="images/from-isabelle.jpeg">
 
@@ -58,7 +58,7 @@
 
           <p>
             <br>Coming? Email 
-            <br><a href="mailto:yes@happybirthdaylovee.lol?subject=Duh, Im coming">yes@happybirthdylovee.lol</a></p>
+            <br><a href="mailto:richard.zaleski91@gmail.com?subject=yes, Im coming">yes@happybirthdylovee.lol</a></p>
 
 
         </section>
